--- a/SCOUTr/app/src/main/res/values/strings.xml
+++ b/SCOUTr/app/src/main/res/values/strings.xml
@@ -1,11 +1,16 @@
 <resources>
     <string name="app_name">SCOUTr</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
     <string name="set_up_new_tournament">Set Up New Tournament</string>
     <string name="record_data">Record Data</string>
     <string name="view_data">View Data</string>
     <string name="sync_data">Sync Data</string>
-    <string name="title_activity_set_up_new_tournament">SetUpNewTournament</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
 
+    <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
