--- a/SCOUTr/app/src/main/res/values/strings.xml
+++ b/SCOUTr/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SCOUTr</string>
+    <string name="app_description">By Marc Schmitt and Rahul Yarlagadda</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
