--- a/SCOUTr/app/src/main/res/values/strings.xml
+++ b/SCOUTr/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="NFC">NFC</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="wifi">Wifi</string>
 </resources>
