--- a/SCOUTr/app/src/main/res/values/strings.xml
+++ b/SCOUTr/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="NFC">NFC</string>
     <string name="bluetooth">Bluetooth</string>
     <string name="wifi">Wifi</string>
+    <string name="sync_dialog_title">Pick a communication method.</string>
 </resources>
