--- a/SCOUTr/app/src/main/res/values/strings.xml
+++ b/SCOUTr/app/src/main/res/values/strings.xml
@@ -12,6 +12,19 @@
 
     <string name="action_settings">Settings</string>
 
+    <array name="team_array">
+        <item>Blue 1</item>
+        <item>Blue 2</item>
+        <item>Blue 3</item>
+        <item>Red 1</item>
+        <item>Red 2</item>
+        <item>Red 3</item>
+    </array>
+
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    <string name="select_team_fragment_title">Select a team</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
