--- a/SCOUTr/app/src/main/res/values/strings.xml
+++ b/SCOUTr/app/src/main/res/values/strings.xml
@@ -38,6 +38,9 @@
     <string name="field_three">Field Three</string>
     <string name="field_four">Field Four</string>
     <string name="record_data_button">Record Data</string>
-    <string name="select_new_tournament">Select a new tournament to record data</string>
 
+    <!-- Set Up New Tournament Messages -->
+    <string name="no_available_tournament">No available tournament</string>
+    <string name="select_new_tournament">Select a new tournament to record data</string>
+    <string name="select_tournament">Please select a tournament to record data</string>
 </resources>
