--- a/SCOUTr/app/src/main/res/values/strings.xml
+++ b/SCOUTr/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="record_data">Record Data</string>
     <string name="view_data">View Data</string>
     <string name="sync_data">Sync Data</string>
+    <string name="status">Status</string>
 
     <string name="action_settings">Settings</string>
 
@@ -38,9 +39,17 @@
     <string name="field_three">Field Three</string>
     <string name="field_four">Field Four</string>
     <string name="record_data_button">Record Data</string>
+    <string name="begin_record_data_button">Begin Recording Data</string>
 
     <!-- Set Up New Tournament Messages -->
     <string name="no_available_tournament">No available tournament</string>
     <string name="select_new_tournament">Select a new tournament to record data</string>
     <string name="select_tournament">Please select a tournament to record data</string>
+
+
+    <!-- Place Holders -->
+    <string name="tournament_name">Tournament Name</string>
+    <string name="match_number">Next Match: %d</string>
+    <string name="position">Position: %s</string>
+
 </resources>
