--- a/SCOUTr/app/src/main/res/values/strings.xml
+++ b/SCOUTr/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="tournament_name">Tournament Name</string>
     <string name="match_number">Next Match: %d</string>
     <string name="position">Position: %s</string>
+    <string name="test_data">Test Data</string>
 
 </resources>
